# course_work_3

./: .gitignore  README.md  main.py  pyproject.toml
src/: main.py
tests/: test_utils.py
utils/: services.py
